SC comments for sky offset algo - to - frame shape stability sections

--- a/tables/fw100k_medsky_offset_hierarchy.tex
+++ b/tables/fw100k_medsky_offset_hierarchy.tex
@@ -1,25 +1,24 @@
-\begin{tabular}{ll|rr|rr}
+\begin{tabular}{ll|rr}
 % \hline
-&  & \multicolumn{2}{c|}{$J$} & \multicolumn{2}{c}{$K_s$} \\ % \cline{3-4} \cline{5-6}
+&  & $J$ & $K_s$ \\ % \cline{3-4} \cline{5-6}
 % \hline
-Offset Type & Sem. & $\sigma_\Delta$ & $\frac{\sigma_\Delta}{\langle I_\mathrm{sky}\rangle }$ & $\sigma_\Delta$ & $\frac{\sigma_\Delta}{\langle I_\mathrm{sky}\rangle }$ \\
-& & \tiny{(DN)} &  \tiny{(\%)} & \tiny{(DN)} &  \tiny{(\%)} \\
+Offset Type & Sem. & $\frac{\sigma_\Delta}{\langle I_\mathrm{sky}\rangle }$ (\%) & $\frac{\sigma_\Delta}{\langle I_\mathrm{sky}\rangle }$ (\%) \\
 \hline
-\multirow{2}{*}{$\Delta_F$} & 07B & 9.94 & 2.53 & 58.72 & 2.29 \\
+\multirow{2}{*}{$\Delta_F$} & 07B & 2.53 & 2.29 \\
 % \hline
-& 09B  & 7.76 & 1.91 & 52.07 & 1.88 \\
+& 09B  & 1.91 & 1.88 \\
 \hline
-\multirow{2}{*}{$\Delta_S$} & 07B & 0.50 & 0.11 & 1.44 & 0.05 \\
+\multirow{2}{*}{$\Delta_S$} & 07B & 0.11 & 0.05 \\
 % \hline
-& 09B & 0.50 & 0.11 & 1.50 & 0.06 \\
+& 09B & 0.11 & 0.06 \\
 \hline
-\multirow{2}{*}{$\Delta_B$} & 07B & 5.00 & 1.24 & 25.87 & 0.94 \\
+\multirow{2}{*}{$\Delta_B$} & 07B & 1.24 & 0.94 \\
 % \hline
-& 09B &  3.05 & 0.66 & 29.79 & 1.13 \\
+& 09B & 0.66 & 1.13 \\
 % \hline
 \hline
-\multirow{2}{*}{$\Delta_\Sigma$} & 07B &  10.89 & 2.73 & 63.47 & 2.44 \\
+\multirow{2}{*}{$\Delta_\Sigma$} & 07B & 2.73 & 2.44 \\
 % \hline
-& 09B &  8.18 & 1.98 & 56.07 & 1.96 \\
+& 09B & 1.98 & 1.96 \\
 % \hline
 \end{tabular}
